@@ -2,6 +2,15 @@ use strict;
 use warnings;
 use ExtUtils::MakeMaker 6.64;	# 6.64 for TEST_REQUIRES
 
+my $dist = {
+	COMPRESS => 'gzip -9f',
+	SUFFIX => 'gz'
+};
+
+if($^O eq 'darwin') {
+	$dist->{'TAR'} = 'gtar';
+}
+
 WriteMakefile(
 	NAME		=> 'Lingua::Conjunction',
 	AUTHOR		=> q{Nigel Horne <njh@bandsman.co.uk>},
@@ -18,6 +27,7 @@ WriteMakefile(
 	TEST_REQUIRES => {
 		'File::Spec' => 0,
 		'Module::Metadata' => 0,
+		'Test::DescribeMe' => 0,
 		'Test::More' => 0,
 		'Test::Most' => 0,
 		'Test::Needs' => 0,
@@ -25,8 +35,7 @@ WriteMakefile(
 	}, PREREQ_PM => {
 		'Carp' => 0,
 		'Exporter' => 0,
-	},
-	dist		=> { COMPRESS => 'gzip -9f', SUFFIX => 'gz', },
+	}, dist => $dist,
 	clean		=> { FILES => 'Lingua-Conjunction-*' },
 	# META_ADD => {
 		# provides => {}
