@@ -3,18 +3,13 @@
 use 5.006;
 use strict;
 use warnings;
-use Test::Most;
 
-if($ENV{AUTHOR_TESTING} ) {
-	eval 'use Test::Spelling::Comment 0.002';
-	if($@) {
-		plan(skip_all => 'Test::Spelling::Comment required for testing comment spelling');
-	} else {
-		Test::Spelling::Comment->new()->add_stopwords(<DATA>)->all_files_ok();
-	}
-} else {
-	plan(skip_all => 'Author tests not required for installation');
-}
+use Test::DescribeMe qw(author);
+use Test::Most;
+use Test::Needs { 'Test::Spelling::Comment' => '0.002' };
+
+Test::Spelling::Comment->import();
+Test::Spelling::Comment->new()->add_stopwords(<DATA>)->all_files_ok();
 
 __DATA__
 cgi
