@@ -2,20 +2,11 @@
 
 use strict;
 use warnings;
-use Test::Most;
 
-BEGIN {
-	if($ENV{AUTHOR_TESTING}) {
-		eval {
-			require Test::MinimumVersion;
-		};
-		if($@) {
-			plan(skip_all => 'Test::MinimumVersion not installed');
-		} else {
-			import Test::MinimumVersion;
-			all_minimum_version_ok('5.8');
-		}
-	} else {
-		plan(skip_all => 'Author tests not required for installation');
-	}
-}
+use Test::DescribeMe qw(author);
+use Test::Most;
+use Test::Needs 'Test::MinimumVersion';
+
+Test::MinimumVersion->import();
+
+all_minimum_version_ok('5.8');
