@@ -3,9 +3,10 @@ use Test::Most;
 use warnings;
 use strict;
 
-eval 'use Test::Portability::Files';
+use Test::DescribeMe qw(author);
+use Test::Needs 'Test::Portability::Files';
 
-plan(skip_all => 'Test::Portability::Files required for testing filenames portability') if $@;
+Test::Portability::Files->import();
 
 # Turn off test_one_dot because even thoug use_file_find is off, T:P:F still
 # tests files not distributed e.g. .travis.yml
