@@ -2,16 +2,11 @@
 
 use strict;
 use warnings;
+
+use Test::DescribeMe qw(author);
 use Test::Needs 'Test::Version';
 use Test::Most;
 
-BEGIN {
-	if($ENV{'AUTHOR_TESTING'}) {
-		Test::Version->import();
-		version_all_ok();
-		done_testing();
-	} else {
-		plan(skip_all => 'Author tests not required for installation');
-	}
-}
-
+Test::Version->import();
+version_all_ok();
+done_testing();
